--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
     "start": "node app.js",
     "watch": "nodemon app.js"
   },
+  "engines": {
+    "node": "15.12.x"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
@@ -17,8 +20,10 @@
     "nodemon": "^2.0.7"
   },
   "dependencies": {
+    "bufferutil": "^4.0.3",
     "express": "^4.17.1",
     "sqlite3": "^5.0.2",
+    "utf-8-validate": "^5.0.4",
     "ws": "^7.4.4"
   }
 }
