--- a/package.json
+++ b/package.json
@@ -20,10 +20,12 @@
     "nodemon": "^2.0.7"
   },
   "dependencies": {
+    "@mapbox/node-pre-gyp": "^1.0.1",
     "axios": "^0.21.1",
     "bufferutil": "^4.0.3",
     "express": "^4.17.1",
     "serializr": "^2.0.5",
+    "sqlite": "^4.0.19",
     "sqlite3": "^5.0.2",
     "utf-8-validate": "^5.0.4",
     "uuid": "^3.4.0",
